Added Pipenv for package management

--- a/part-03/mlb-tutorial-03.qmd
+++ b/part-03/mlb-tutorial-03.qmd
@@ -318,44 +318,48 @@ Beantworten Sie die folgenden konzeptionellen Fragen:
 
     **MRP-Planung mit Lagerbeständen:**
     
-    **S1 (Anfangsbestand: 50):**
-    - Woche 1: Bedarf 30, Bestand 50 → kein Nettobedarf (Endbestand: 20)
-    - Woche 3: Bedarf 80, Bestand 20 → Nettobedarf 60 → **Produktion in Woche 2**
-    - Woche 5: Bedarf 70, Bestand 0 → Nettobedarf 70 → Produktion in Woche 4
+    **Endprodukte:**
+    
+    **S1 (Vorlaufzeit: 1, Anfangsbestand: 50):**
+    - Woche 1: Bruttobedarf 30, Bestand 50 → Nettobedarf 0 (Endbestand: 20)
+    - Woche 3: Bruttobedarf 80, Bestand 20 → Nettobedarf 60 → **Produktion in Woche 2**
+    - Woche 5: Bruttobedarf 70, Bestand 0 → Nettobedarf 70 → Produktion in Woche 4
 
-    **L1 (Anfangsbestand: 20):**
-    - Woche 2: Bedarf 40, Bestand 20 → Nettobedarf 20 → **Produktion in Woche 1**
-    - Woche 4: Bedarf 60, Bestand 0 → Nettobedarf 60 → Produktion in Woche 3
-    - Woche 6: Bedarf 50, Bestand 0 → Nettobedarf 50 → Produktion in Woche 5
+    **L1 (Vorlaufzeit: 1, Anfangsbestand: 20):**
+    - Woche 2: Bruttobedarf 40, Bestand 20 → Nettobedarf 20 → **Produktion in Woche 1**
+    - Woche 4: Bruttobedarf 60, Bestand 0 → Nettobedarf 60 → Produktion in Woche 3
+    - Woche 6: Bruttobedarf 50, Bestand 0 → Nettobedarf 50 → Produktion in Woche 5
 
-    **P1 (Anfangsbestand: 30):**
-    - Woche 1: 20 benötigt (für L1), Bestand 30 → kein Nettobedarf (Endbestand: 10)
-    - Woche 3: 60 benötigt (für L1), Bestand 10 → Nettobedarf 50 → **Bestellung in Woche 1**
-    - Woche 5: 50 benötigt (für L1), Bestand 0 → Nettobedarf 50 → Bestellung in Woche 3
+    **Komponenten:**
+    
+    **P1 (Vorlaufzeit: 2, Anfangsbestand: 30, nur für L1):**
+    - Woche 1: Bruttobedarf 20 (für L1), Bestand 30 → Nettobedarf 0 (Endbestand: 10)
+    - Woche 3: Bruttobedarf 60 (für L1), Bestand 10 → Nettobedarf 50 → **Bestellung in Woche 1**
+    - Woche 5: Bruttobedarf 50 (für L1), Bestand 0 → Nettobedarf 50 → Bestellung in Woche 3
 
-    **W1 (Anfangsbestand: 100):**
-    - Woche 1: 20 benötigt (für L1), Bestand 100 → kein Nettobedarf (Endbestand: 80)
-    - Woche 2: 60 benötigt (für S1), Bestand 80 → kein Nettobedarf (Endbestand: 20)
-    - Woche 3: 60 benötigt (für L1), Bestand 20 → Nettobedarf 40 → **Bestellung in Woche 0**
-    - Woche 4: 70 benötigt (für S1), Bestand 0 → Nettobedarf 70 → **Bestellung in Woche 1**
-    - Woche 5: 50 benötigt (für L1), Bestand 0 → Nettobedarf 50 → **Bestellung in Woche 2**
+    **W1 (Vorlaufzeit: 3, Anfangsbestand: 100, für L1 und S1):**
+    - Woche 1: Bruttobedarf 20 (für L1), Bestand 100 → Nettobedarf 0 (Endbestand: 80)
+    - Woche 2: Bruttobedarf 60 (für S1), Bestand 80 → Nettobedarf 0 (Endbestand: 20)
+    - Woche 3: Bruttobedarf 60 (für L1), Bestand 20 → Nettobedarf 40 → **Bestellung in Woche 0**
+    - Woche 4: Bruttobedarf 70 (für S1), Bestand 0 → Nettobedarf 70 → **Bestellung in Woche 1**
+    - Woche 5: Bruttobedarf 50 (für L1), Bestand 0 → Nettobedarf 50 → **Bestellung in Woche 2**
 
     **Eingefrorene Bestellungen (Bestelltermin ≤ Woche 2):**
-    -   **Stecker S1:** Produktion in Woche 2
-    -   **Lampe L1:** Produktion in Woche 1
-    -   **Panel P1:** Bestellung in Woche 1
-    -   **Wifi-Modul W1:** Bestellungen in Woche 0, 1 und 2
+    -   **W1:** Bestellungen von 40 Stück in Woche 0, 70 Stück in Woche 1, 50 Stück in Woche 2
+    -   **L1:** Produktion von 20 Stück in Woche 1
+    -   **P1:** Bestellung von 50 Stück in Woche 1
+    -   **S1:** Produktion von 60 Stück in Woche 2
 
     Die hohen Anfangsbestände reduzieren die Anzahl der notwendigen Bestellungen erheblich. Alle Produktions- und Beschaffungsvorgänge, die bereits gestartet wurden (Bestellzeitpunkt ≤ 2), sind fix und bilden die Ausgangsbasis für die Neuplanung.
 
 2.  **Verlust der Optimalität:**
     Der ursprüngliche Plan basierte auf einer Stück-für-Stück-Politik unter Berücksichtigung der Lagerbestände. Die Erhöhung des L1-Bedarfs in Woche 6 von 50 auf 80 Stück hat folgende Kaskade von Effekten:
-    -   Der **zusätzliche L1-Bedarf von 30 Stück** in Woche 6 erfordert eine L1-Produktion von 30 Stück in Woche 5.
-    -   Dies führt zu einem **zusätzlichen P1-Bedarf von 30 Stück** in Woche 5, was eine P1-Bestellung von 30 Stück in Woche 3 erfordert.
-    -   Gleichzeitig entsteht ein **zusätzlicher W1-Bedarf von 30 Stück** in Woche 5, was eine W1-Bestellung von 30 Stück in Woche 2 erfordert.
-    -   **Problem:** Die W1-Bestellung in Woche 2 ist bereits "eingefroren" und kann nicht mehr angepasst werden. Die ursprünglich geplante Bestellmenge von 50 Stück reicht nun nicht mehr aus.
-    -   **Konsequenz:** Es muss eine **zusätzliche, ineffiziente W1-Bestellung** für die fehlenden 30 Stück aufgegeben werden, was zu höheren Gesamtkosten führt (zusätzliche Rüstkosten oder suboptimale Losgrößen).
-    -   **Fazit:** Selbst eine kleine Änderung in der fernen Zukunft kann durch die mehrstufigen Abhängigkeiten und die Frozen Zone die Optimalität des gesamten Plans beeinträchtigen.
+    -   Der **zusätzliche L1-Bedarf von 30 Stück** in Woche 6 erfordert eine zusätzliche L1-Produktion von 30 Stück in Woche 5.
+    -   Dies führt zu einem **zusätzlichen P1-Bedarf von 30 Stück** in Woche 5, was eine zusätzliche P1-Bestellung von 30 Stück in Woche 3 erfordert.
+    -   Gleichzeitig entsteht ein **zusätzlicher W1-Bedarf von 30 Stück** in Woche 5, was eine zusätzliche W1-Bestellung von 30 Stück in Woche 2 erfordert.
+    -   **Problem:** Die W1-Bestellung in Woche 2 ist bereits "eingefroren" und kann nicht mehr angepasst werden. Die ursprünglich geplante Bestellmenge von 50 Stück müsste auf 80 Stück erhöht werden.
+    -   **Konsequenz:** Da die eingefrorene Bestellung nicht mehr geändert werden kann, muss eine **neue, zusätzliche W1-Bestellung** für die fehlenden 30 Stück in einer späteren Woche aufgegeben werden, was zu höheren Gesamtkosten führt (zusätzliche Rüstkosten oder Eilbestellungen).
+    -   **Fazit:** Selbst eine kleine Änderung in der fernen Zukunft kann durch die mehrstufigen Abhängigkeiten und die Frozen Zone die Optimalität des gesamten Plans beeinträchtigen und zu kostspieligen Anpassungen zwingen.
 
 3.  **Definitionen:**
     -   **Frozen Zone:** Dies ist der unmittelbar bevorstehende Zeitraum des Plans (hier: Woche 1-2), in dem keine Änderungen mehr vorgenommen werden. Die Produktionsaufträge sind bereits freigegeben, Material ist unterwegs. Dies schafft Stabilität in der Produktion. Die Länge der Frozen Zone orientiert sich oft an der kumulierten Vorlaufzeit der Produkte, kann aber aus strategischen Gründen (z.B. zur Kapazitätsglättung oder aufgrund von Lieferantenverträgen) bewusst länger gewählt werden.
